web wiz girls after final changes

--- a/set3/2/index.html
+++ b/set3/2/index.html
@@ -20,7 +20,7 @@
             position:fixed;
             top:75px;
             left:75px;
-            background:#1A4341;
+            background:#194341;
             border-radius:65% 0;
 
         }
