--- a/set3/3/index.html
+++ b/set3/3/index.html
@@ -65,7 +65,7 @@
   left: 35px;
   width: 225px;
   height: 225px;
-  border: 2px #4A437F dashed;
+  border: 2px #5a5389 dashed;
   border-radius: 100%;
   -webkit-animation: spin-right 15s linear infinite;
   animation: spin-right 15s linear infinite;
